# embenet-demo-nucleo-wl33cc1

./: .cproject  .mxproject  .project  Node-debug.launch  Node-release.launch  README.md  Root-debug.launch  Root-release.launch  embenet_demo.ioc
Core/Inc/: main.h  mqttsn_client_service.h  stm32wl3x_hal_conf.h  stm32wl3x_it.h  stm32wl3x_nucleo_conf.h  synchronous_led_task.h  udp_service.h
Core/Src/: main.c  mqttsn_client_service.c  stm32wl3x_hal_msp.c  stm32wl3x_it.c  synchronous_led_task.c  udp_service.c
Drivers/BSP/STM32WL3x-Nucleo/: stm32wl3x_nucleo.h
Drivers/STM32WL3x_HAL_Driver/Inc/: stm32wl3x_hal_gpio_ex.h  stm32wl3x_hal_mrsubg.h  stm32wl3x_ll_mrsubg.h  stm32wl3x_ll_utils.h
Drivers/STM32WL3x_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
Drivers/STM32WL3x_HAL_Driver/Src/: stm32wl3x_hal_mrsubg.c  stm32wl3x_ll_utils.c
Utils/crc/: CMakeLists.txt  crc16.c  crc32.c  crc8.c  crc_embetile_api.c
Utils/crc/include/embetech/: crc16.h  crc32.h  crc8.h
Utils/logger/: logger.c
Utils/logger/include/embetech/: logger.h
Utils/ring_buffer/: ring_buffer.c  ring_buffer_16bit.c
Utils/ring_buffer/include/embetech/: ring_buffer.h  ring_buffer_16bit.h
doc/: Doxyfile  README.md  how_it_works.md  mqttsn_demo.md  mqttsn_demo_code.md
embeNET/embenet_node_port/: LICENSE.txt  embenet_aes128.c  embenet_allocator.c  embenet_brt.c  embenet_capabilities.c  embenet_critical_section.c  embenet_eui64.c  embenet_radio.c  embenet_random.c  embenet_timer.c
embeNET/embenet_node_port/include/: embenet_node_stm32wl3_bsp_interface.h  embenet_port_interrupt_priorities.h
(+388 files in other folders)
